Refector : 공고 신청, 개인정보 수정, 개인정보 조회 및 마이페이지 공고 관련 API Refectoring